--- a/src/index.css
+++ b/src/index.css
@@ -212,7 +212,7 @@ p, h1, h2, h3, h4, h5, h6 {
   align-items: center;
   gap: 2rem;
   /* transform: skew(-10deg, -5deg); */
-  transition: box-shadow 0.2s ease-out,  transform 0.2s ease-out;
+  transition: box-shadow 0.2s ease-out,  transform 0.2s ease-in-out;
 }
 
 .service:hover {
@@ -222,8 +222,8 @@ p, h1, h2, h3, h4, h5, h6 {
   /* transform: rotateY(180deg); */
   /* transform: translateY(-10px); */
   /* transform: translateY(-10px); */
-  box-shadow: rgba(255, 255, 255, 0.45) 0px 48px 100px 0px;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  /* box-shadow: rgba(255, 255, 255, 0.2) 0px 48px 100px 0px; */
+  box-shadow: rgba(255, 255, 255, 0.15) 0px 54px 55px, rgba(255, 255, 255, 0.05) 0px -12px 30px, rgba(255, 255, 255, 0.17) 0px 4px 6px, rgba(255, 255, 255, 0.07) 0px 12px 13px, rgba(255, 255, 255, 0.09) 0px -3px 5px;
 }
 
 .service img {
@@ -279,6 +279,11 @@ p, h1, h2, h3, h4, h5, h6 {
   flex-direction: column;
   align-items: center;
   gap: 1rem;
+  transition: transform 0.25s ease-in-out;
+}
+
+.portfolio-card:hover {
+  transform: scale(1.05);
 }
 
 .portfolio-card-content h1 {
@@ -303,11 +308,23 @@ p, h1, h2, h3, h4, h5, h6 {
 }
 
 .portfolio-card-content a {
-  display: block;
+  display: inline;
   color: rgba(255, 255, 255, .7);
   text-decoration: none;
   font-family: 'Figtree';
+  padding-bottom: 3px;
+  border-bottom: 2px solid rgba(255, 255, 255, .7);
+  transition: color 0.4s ease-in-out, border-color 0.4s ease-in-out;
+}
 
+.portfolio-card-content a:hover {
+  border-color:rgba(255, 255, 255, .9) ;
+  color: rgba(255, 255, 255, .9);
+
+}
+
+.portfolio-card-content a i {
+  margin-left: 3px;
 }
 
 
@@ -324,5 +341,9 @@ p, h1, h2, h3, h4, h5, h6 {
 
   .service-content p {
     padding: 0 40px;
+  }
+
+  .portfolio-grid {
+    grid-template-columns: 1fr;
   }
 }
