--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,10 @@ body {
   background-color: var(--bg);
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 
 input, button, textarea, select {
   font: inherit;
@@ -89,6 +93,38 @@ p, h1, h2, h3, h4, h5, h6 {
   margin: 0 8px;
 }
 
+.cross {
+  position: relative;
+  width: 30px;  /* Width of the cross */
+  height: 30px;
+  cursor: pointer;
+   /* Height of the cross */
+}
+
+.cross::before,
+.cross::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 4px;  /* Thickness of the cross */
+  background-color: white; /* Goldish yellow or any color you prefer */
+  transform-origin: center;
+  transition: background-color 0.3s ease;
+}
+
+.cross::before {
+  transform: translate(-50%, -50%) rotate(45deg); /* Diagonal line */
+}
+
+.cross::after {
+  transform: translate(-50%, -50%) rotate(-45deg); /* Opposite diagonal line */
+}
+
+
+
+
 .hover-underline-animation:hover {
   /* color: white; */
 }
@@ -121,6 +157,25 @@ p, h1, h2, h3, h4, h5, h6 {
   color: white;
 }
 
+.hamburger {
+  display: none;
+  cursor: pointer;
+  flex-direction: column;
+  gap: 5px;
+  z-index: 9999;
+}
+
+.hamburger .bar {
+  width: 35px;
+  height: 4px;
+  background-color: white;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
+
+
+
+
 .hero-text {
   margin-top:60px;
   text-align: center;
@@ -129,8 +184,8 @@ p, h1, h2, h3, h4, h5, h6 {
 .hero-text h1 {
   font-family: Porter;
   color: var(--primary);
-  font-size: 3.4rem;
-  letter-spacing:.5cqw;
+  font-size: calc(1.5rem + 2vw);
+  /* letter-spacing:.5cqw; */
 }
 
 .hero-text p {
@@ -223,7 +278,7 @@ p, h1, h2, h3, h4, h5, h6 {
   /* transform: translateY(-10px); */
   /* transform: translateY(-10px); */
   /* box-shadow: rgba(255, 255, 255, 0.2) 0px 48px 100px 0px; */
-  box-shadow: rgba(255, 255, 255, 0.15) 0px 54px 55px, rgba(255, 255, 255, 0.05) 0px -12px 30px, rgba(255, 255, 255, 0.17) 0px 4px 6px, rgba(255, 255, 255, 0.07) 0px 12px 13px, rgba(255, 255, 255, 0.09) 0px -3px 5px;
+  box-shadow: rgba(255, 255, 255, 0.15) 0px 54px 55px, rgba(255, 255, 255, 0.09) 0px -12px 30px, rgba(255, 255, 255, 0.17) 0px 4px 6px, rgba(255, 255, 255, 0.07) 0px 12px 13px, rgba(255, 255, 255, 0.19) 0px -3px 5px;
 }
 
 .service img {
@@ -345,5 +400,39 @@ p, h1, h2, h3, h4, h5, h6 {
 
   .portfolio-grid {
     grid-template-columns: 1fr;
+  }
+
+  .nav-links  {
+    /* flex-direction: column; */
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    background-color: var(--primary);
+    padding: 20px 0;
+    border-radius: 0 0 30px 30px;
+    opacity: 0;
+    pointer-events: none;
+    transform: translateY(-20px);
+    transition: all 0.3s ease;
+    height: 100%;
+    padding: 40px 0;
+    overflow:visible;
+    backdrop-filter: blur(10px);
+    justify-content: center;
+    align-items: center;
+    padding: 30px 0;
+  }
+
+  .nav-links.active {
+    opacity: 1;
+    pointer-events: auto;
+    transform: translateY(0);
+    justify-content: center;
+    align-items: center;
+  }
+
+  .hamburger {
+    display: flex;
   }
 }
