--- a/src/index.css
+++ b/src/index.css
@@ -381,6 +381,11 @@ p, h1, h2, h3, h4, h5, h6 {
   margin-left: 3px;
 }
 
+.contact-details h1 {
+  color: white;
+  font-family: 'Readex Pro';
+}
+
 
 @media only screen and (max-width: 900px) {
   .two-col {
