--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 :root {
   --bg:#110724;
-  --primary:#EB9C1E;
+  --primary:#E19214;
   --card:#282036;
 }
 
@@ -338,9 +338,13 @@ p, h1, h2, h3, h4, h5, h6 {
 
 .portfolio-grid {
   display: grid;
-  justify-items: center;
+  justify-content: center;
   gap: 2rem;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 400px);
+}
+
+.span-2 {
+  grid-column: span 2;
 }
 
 .portfolio-card {
@@ -644,8 +648,35 @@ padding-top:10.875rem;
 }
 .gallery {
   padding: 100px 0 0 0;
+  width: 100%;
 }
 
+ .sub-heading {
+  color: white;
+  font-family: 'READEX PRO';
+  /* text-transform: uppercase; */
+  font-weight: 600;
+  font-size:1.2rem ;
+  margin-bottom: 30px;
+  position: relative;
+  display: block;
+  text-align: center;
+}
+
+.sub-heading::after {
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: -10px;
+  transform: translateX(-50%);
+  width: 50%;
+  height: 2px;
+  background-color: var(--primary);
+  transition: width 0.3s ease;
+}
+.marian {
+  margin-top: 50px;
+}
 
 .gallery-container {
   display: grid;
@@ -672,30 +703,27 @@ padding-top:10.875rem;
             max-height: 100%;;
 }
 
-.image-1 {
+.img-1 {
   grid-column: 1 / 2;
   grid-row: 1 / 2;
 }
 
-.image-2 {
+.img-2 {
   grid-column: 2 / 4;
   grid-row: 1 / 2;
 }
 
-.image-3 {
+.img-3 {
   grid-column: 1 / 3;
   grid-row: 2 / 3;
 }
 
-.image-4 {
+.img-4 {
   grid-column: 3 / 4;
   grid-row: 2 / 3;
 }
 
-.image-5 {
-  grid-column: 1 / 4;
-  grid-row: 3 / 4;
-}
+
 
 .image {
   width: 100%;
@@ -729,9 +757,17 @@ padding-top:10.875rem;
       grid-template-rows: repeat(5, 200px);
   }
 
-  .image-1, .image-2, .image-3, .image-4, .image-5 {
+  .img-1, .img-2, .img-3, .img-4 {
       grid-column: 1 / 2;
       grid-row: auto;
+  }
+
+  .sub-heading {
+    text-align: center;
+  }
+
+  .marian , .lpu {
+    margin: 0px;
   }
 }
 
@@ -751,7 +787,12 @@ padding-top:10.875rem;
   }
 
   .portfolio-grid {
+    display: grid;
     grid-template-columns: 1fr;
+  }
+
+  .span-2 {
+    grid-area: span 1;
   }
 
   .portfolio-card-content img  {
